Use image to avoid breaking layout on mobile

--- a/assets/css/devstyle.css
+++ b/assets/css/devstyle.css
@@ -11705,6 +11705,26 @@ footer p a:hover {
     text-align: center;
   }
 }
+@media (prefers-color-scheme: dark) {
+  .demo-word-break-dm {
+    display: block;
+    max-width: 43rem;
+  }
+
+  .demo-word-break {
+    display: none;
+  }
+}
+@media (prefers-color-scheme: light) {
+  .demo-word-break-dm {
+    display: none;
+  }
+
+  .demo-word-break {
+    display: block;
+    max-width: 39.5rem;
+  }
+}
 @media (max-width: 768px) {
   nav.sidebar {
     padding: 4.6rem 0.6rem 2rem 8%;
